feat: basic functionality
